Drobná úprava zarovnání

--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -30,13 +30,13 @@ $c-teplarny-problematic-bg: #fff1ef;
             color: var(--status-color);
 
             .status-icon {
-                margin-right: .3em;
+                margin-right: .8rem;
                 font-size: .85em;
             }
         }
 
         p {
-            margin: 0 0 0 2.4rem;
+            margin: 0 0 0 2.5rem;
             color: $c-teplarny-dark-grey;
         }
     }
