Drobné ladenie testimoniálov

--- a/assets-local/_atlas-dekarbonizace.scss
+++ b/assets-local/_atlas-dekarbonizace.scss
@@ -433,6 +433,8 @@ $fullscreen-max-width: 1100px;
                 font-size: 1.2rem;
                 font-weight: bold;
                 align-self: end;
+                line-height: 1.2;
+                margin-bottom: 0.3rem;
             }
 
             .institution {
