Zmena hlavného textu a online badge.

--- a/assets-local/_atlas-dekarbonizace.scss
+++ b/assets-local/_atlas-dekarbonizace.scss
@@ -26,12 +26,12 @@ $fullscreen-max-width: 1100px;
 
     /* Online Badge - floating */
     .online-badge-float {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        width: 100px;
-        height: 100px;
-        z-index: 100;
+        width: 10vh;
+        height: auto;
+        top: 8vh;
+        right: 8vh;
+        position: absolute;
+        z-index: 2;
         cursor: pointer;
         transition: transform 0.3s;
 
@@ -145,6 +145,9 @@ $fullscreen-max-width: 1100px;
     .feature-card {
         text-align: left;
         padding: 30px 20px;
+        color: #006c90;
+        font-size: 1.2rem;
+        line-height: 1.2;
     }
 
     .feature-icon {
@@ -155,9 +158,6 @@ $fullscreen-max-width: 1100px;
 
     .feature-card strong {
         display: block;
-        color: #006C90;
-        font-size: 1.2rem;
-        line-height: 1.3;
         font-weight: 600;
         max-width: 40ch;
     }
@@ -632,8 +632,8 @@ $fullscreen-max-width: 1100px;
         }
 
         .online-badge-float {
-            width: 70px;
-            height: 70px;
+            width: 8vw;
+            height: 8vw;
         }
 
         .logos-grid {
