--- a/assets-local/_atlas-dekarbonizace.scss
+++ b/assets-local/_atlas-dekarbonizace.scss
@@ -509,8 +509,9 @@ $fullscreen-max-width: 1100px;
     .logos-text {
         text-align: left;
         color: #666;
-        font-size: 0.95rem;
-        line-height: 1.6;
+        font-size: 0.9rem;
+        line-height: 1.5;
+        max-width: 90ch;
     }
 
     .inline-list {
