--- a/assets-local/_atlas-dekarbonizace.scss
+++ b/assets-local/_atlas-dekarbonizace.scss
@@ -174,22 +174,17 @@ $fullscreen-max-width: 1100px;
         display: grid;
         grid-template-columns: 1.5fr 1fr;
         gap: 60px;
-        align-items: center;
     }
 
     .carousel-container {
         position: relative;
         background: white;
-        border: 3px solid #E5F5FA;
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     }
 
     .carousel {
         position: relative;
         overflow: hidden;
-        border-radius: 5px;
+        border: 1px solid #006C90;
     }
 
     .carousel-slide {
