--- a/assets-local/_atlas-dekarbonizace.scss
+++ b/assets-local/_atlas-dekarbonizace.scss
@@ -416,6 +416,7 @@ $fullscreen-max-width: 1100px;
                 grid-column: 1/2;
                 grid-row: 1/3;
                 overflow: hidden;
+                align-self: end;
 
                 img {
                     width: 100%;
@@ -443,11 +444,6 @@ $fullscreen-max-width: 1100px;
         // Only show first 3 cards when collapsed
         &.is-collapsed .testimonial-card:nth-child(n + 4) {
             display: none;
-        }
-
-        // Show all cards when expanded
-        &.is-expanded .testimonial-card {
-            display: grid;
         }
 
         .testimonials-toggle {
