--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -457,6 +457,16 @@ $c-teplarny-problematic-bg: #fff1ef;
         margin-bottom: 0rem;
     }
 
+    .mf-per-household {
+        font-size: 0.8rem;
+        color: $c-teplarny-grey;
+        margin-bottom: 0.8rem !important;
+    }
+
+    .chp {
+        margin-top: 1.6rem;
+    }
+
     .households-share {
         font-size: 1.1rem;
         color: $c-teplarny-grey;
