--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -267,6 +267,8 @@ $c-teplarny-problematic-bg: #fff1ef;
     .ippc {
         font-size: 0.8rem;
         color: $c-teplarny-dark-grey;
+        padding-left: 1rem;
+
         a {
             color: $c-teplarny-dark-grey;
         }
