--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -265,7 +265,7 @@ $c-teplarny-problematic-bg: #fff1ef;
     }
 
     .ippc {
-        font-size: 0.8rem;
+        font-size: 80%;
         color: $c-teplarny-dark-grey;
         padding-left: 1rem;
 
