--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -467,8 +467,8 @@ $c-teplarny-problematic-bg: #fff1ef;
 
     .mf-paid {
         color: $c-teplarny-light-grey;
-        display: block;
         font-size: 0.75rem;
+        padding-left: 0.5rem;
     }
 
     .chp {
