fixup! Odsazení tlačítka "Více"

--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -210,6 +210,7 @@ $c-teplarny-problematic-bg: #fff1ef;
         grid-template-columns: 2fr 1fr 1fr 1fr;
         column-gap: 2rem;
         padding: 0rem;
+        padding-bottom: 1.25rem;
     }
 
     .status-line {
