--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -11,14 +11,6 @@ $c-teplarny-in-progress: #ffbc5b;
 $c-teplarny-problematic: #bb2719;
 $c-teplarny-problematic-bg: #fff1ef;
 
-#last-updated {
-    font-size: 0.9rem;
-    color: $c-teplarny-dark-grey;
-    div, div a {
-        color: $c-teplarny-grey;
-    }
-}
-
 #highlights-dashboard-teplaren {
     .card {
         border: 1px solid var(--status-color);
@@ -72,26 +64,19 @@ $c-teplarny-problematic-bg: #fff1ef;
 #overall-charts {
     display: grid;
     grid-template-columns: 3fr 1fr;
+    grid-template-rows: auto auto;
     grid-column-gap: 2rem;
     margin-bottom: 3rem;
 
-    #treemap {
-        max-height: 300px;
-    }
-
-    #treemap .cell text.status {
-        font-size: 1.2rem;
-        font-weight: 600;
-        fill: white;
-        pointer-events: none;
-    }
-
-    #treemap .cell text.pctHouseholds {
-        font-size: 1rem;
-        fill: white;
+    #stacked-bar {
+        grid-column: 1/3;
+        grid-row: 1/2;
     }
 
     #map {
+        grid-column: 1/2;
+        grid-row: 2/3;
+
         text {
             font-family: 'Source Sans Pro';
             paint-order: stroke;
@@ -188,6 +173,11 @@ $c-teplarny-problematic-bg: #fff1ef;
     }
 
     .card-body {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr 1fr;
+        column-gap: 2rem;
+        padding: 0rem;
+        padding-bottom: 1.25rem;
 
         h3 {
             font-size: 1.6rem;
@@ -198,27 +188,27 @@ $c-teplarny-problematic-bg: #fff1ef;
             margin-top: 0rem;
         }
 
-        h4 {
-            margin: 0;
-            font-size: .9rem;
-            font-weight: normal;
-            color: $c-teplarny-grey;
-        }
-
         .owner {
             margin-left: auto;
             font-size: 1.1rem;
             font-weight: normal;
             color: $c-teplarny-light-grey;
         }
-    }
 
-    .card-body {
-        display: grid;
-        grid-template-columns: 2fr 1fr 1fr 1fr;
-        column-gap: 2rem;
-        padding: 0rem;
-        padding-bottom: 1.25rem;
+        h4,
+        .stats>dt,
+        .fuels>dt,
+        .subsidies>dt {
+            margin: 0;
+            font-size: .9rem;
+            line-height: 1.2;
+            font-weight: normal;
+            color: $c-teplarny-grey;
+        }
+
+        .emissions {
+            margin-top: 2rem;
+        }
     }
 
     .status-line {
@@ -429,32 +419,6 @@ $c-teplarny-problematic-bg: #fff1ef;
         .notes::after {
             display: none;
         }
-    }
-
-    // Stats labels
-
-    .households,
-    .emissions,
-    .fuels>dt,
-    .subsidies>dt{
-        font-size: 0.9rem;
-        font-weight: 400;
-        color: $c-teplarny-grey;
-        margin-bottom: 0rem;
-    }
-
-    .subsidies{
-        .detail{
-            margin-bottom: .2rem;
-        }
-    }
-
-    .emissions {
-        margin-top: 1rem;
-    }
-
-    .fuels>dt {
-        margin-bottom: .32rem;
     }
 
     // Stats values
