--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -13,15 +13,14 @@ $c-teplarny-problematic-bg: #fff1ef;
 
 #overall-charts {
     display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: auto auto;
-    grid-column-gap: 2rem;
-    margin-bottom: 3rem;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto auto auto;
+    grid-column-gap: 1rem;
 
     #pct-households {
         grid-column: 1/3;
         grid-row: 1/2;
-        padding-bottom: 2rem;
+        padding-bottom: 1rem;
 
         h4 {
             margin-bottom: 2rem;
@@ -29,7 +28,7 @@ $c-teplarny-problematic-bg: #fff1ef;
     }
     
     #map {
-        grid-column: 1/2;
+        grid-column: 2/3;
         grid-row: 2/3;
         align-self: start;
 
@@ -48,6 +47,21 @@ $c-teplarny-problematic-bg: #fff1ef;
                 font-size: 1rem;
                 font-weight: 600;
             }
+        }
+    }
+
+    #status-cards {
+        grid-column: 1/2;
+        grid-row: 2/4;   
+    }
+
+    #subsidies-cards {
+        grid-column: 2/3;
+        grid-row: 3/4;
+        justify-items: end;
+        
+        h3 {
+            color: #3a3a45;
         }
     }
 
@@ -79,6 +93,10 @@ $c-teplarny-problematic-bg: #fff1ef;
                 opacity: .6;
             }
         }
+
+        .card-body{
+            padding-left: 0;
+        }
     }
 
     .status-done {
@@ -101,13 +119,22 @@ $c-teplarny-problematic-bg: #fff1ef;
 }
 
 #controls-status {
-    display: flex;
-    column-gap: 1rem;
-    row-gap: 0rem;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr 1fr;
     font-size: 1.1rem;
+    line-height: 1.3;
 
     p {
+        grid-row: 1/2;
         margin: 0;
+    }
+
+    .forms {
+        grid-row: 2/3;
+        display: inline-flex;     
+        align-items: center;  
+        gap: 1rem;
     }
 
     label {
