--- a/assets-local/_dashboard-teplaren.scss
+++ b/assets-local/_dashboard-teplaren.scss
@@ -13,14 +13,22 @@ $c-teplarny-problematic-bg: #fff1ef;
 
 #overall-charts {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: auto auto auto;
-    grid-column-gap: 1rem;
 
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    margin-bottom: 2rem;
+    
+    // DESKTOP ADJUSTMENT
+    @media (min-width: 992px) {
+        grid-template-columns: 1fr 3fr;
+        grid-template-rows: auto auto auto;
+        grid-column-gap: 1rem;
+    }   
+    
     #pct-households {
         grid-column: 1/3;
         grid-row: 1/2;
-        padding-bottom: 1rem;
+        padding-bottom: 0;
 
         h4 {
             margin-bottom: 2rem;
@@ -28,8 +36,15 @@ $c-teplarny-problematic-bg: #fff1ef;
     }
     
     #map {
-        grid-column: 2/3;
-        grid-row: 2/3;
+        grid-column: 1/3;
+        grid-row: 2/3; 
+
+        // DESKTOP ADJUSTMENT
+        @media (min-width: 992px) {
+            grid-column: 2/3;
+            grid-row: 2/3;
+        }      
+
         align-self: start;
 
         text {
@@ -51,14 +66,29 @@ $c-teplarny-problematic-bg: #fff1ef;
     }
 
     #status-cards {
-        grid-column: 1/2;
-        grid-row: 2/4;   
+        grid-column: 1/3;
+        grid-row: 3/4;   
+
+        // DESKTOP ADJUSTMENT
+        @media (min-width: 992px) {
+            grid-column: 1/2;
+            grid-row: 2/4;
+            
+        }      
+
     }
 
     #subsidies-cards {
-        grid-column: 2/3;
-        grid-row: 3/4;
-        justify-items: end;
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+        
+
+        // DESKTOP ADJUSTMENT
+        @media (min-width: 992px) {
+            grid-column: 2/3;
+            grid-row: 3/4;
+            justify-self: end;
+        }
         
         h3 {
             color: #3a3a45;
@@ -181,7 +211,9 @@ $c-teplarny-problematic-bg: #fff1ef;
 
     .card-body {
         display: grid;
-        grid-template-columns: 2fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+
         column-gap: 2rem;
         padding: 0rem;
         padding-bottom: 1.25rem;
@@ -193,6 +225,8 @@ $c-teplarny-problematic-bg: #fff1ef;
             color: #3e3e4d;
             margin-top: .2rem;
             margin-bottom: .4rem;
+            grid-row: 2/3;
+            grid-column: 1/3;
         }
 
         .owner {
@@ -204,6 +238,8 @@ $c-teplarny-problematic-bg: #fff1ef;
 
         h4 {
             margin-bottom: 0;
+            grid-row: 1/2;
+            grid-column: 1/3;
         }
         
         h4,
@@ -217,6 +253,58 @@ $c-teplarny-problematic-bg: #fff1ef;
             color: $c-teplarny-dark-grey;
             text-transform: uppercase;
         }
+
+        .stats{
+            grid-column: 1/2;
+            grid-row: 4/5;
+        }
+
+        .status-line{
+            grid-column: 1/3;
+        }
+
+        .notes {
+            grid-column: 1 / 3;
+            grid-row: 6 / 7;
+        }
+
+        // DESKTOP ADJUSTMENT
+        @media (min-width: 992px) {
+            grid-template-columns: 2fr 1fr 1fr 1fr; 
+            grid-template-rows: none;
+            grid-auto-flow: row;
+
+            .status-line, h4, h3, .notes {
+                grid-column: 1/2;
+                grid-row: 1/-1;
+                position: relative;
+            }
+            h3 {
+                top: 1rem;
+            }
+            .status-line {
+                top: 3.7rem;
+            }
+            .notes {
+                top: 6rem;
+            }
+            .stats {
+                grid-column: 2/3;
+                grid-row: auto;
+            }
+            .fuels{
+                grid-column: 3/4;
+                grid-row: auto;
+            }
+            .subsidies {
+                grid-column: 4/5;
+                grid-row: auto;
+            }
+            .stats, .fuels, .subsidies {
+                grid-row: 1/5;
+            }
+        }   
+
 
     }
 
@@ -272,6 +360,7 @@ $c-teplarny-problematic-bg: #fff1ef;
         color: #999;
         text-transform: uppercase;
         letter-spacing: .02em;
+        grid-column: 1/2;
 
         i {
             margin-right: .2em;
@@ -507,4 +596,44 @@ $c-teplarny-problematic-bg: #fff1ef;
         }
     }
 
+}
+
+// MOBILE ADJUSTMENT
+@media (max-width: 767px) {
+
+    #status-cards, #subsidies-cards {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        
+        .card {
+            flex: 0 0 50%;
+            max-width: 50%;
+        }
+    }
+    #tabulka-dashboard-teplaren {
+        .notes{
+            max-height: initial;
+            overflow: visible;
+        }
+       .notes::after{
+            display: none;
+        }
+        
+        .card-body {
+            padding-bottom: 0;
+        }
+    }
+
+    #pct-households {
+        padding-bottom: 1rem;
+    }
+
+    .details-toggle {
+        display: none;
+    }
+
+    #controls-status {
+        margin-bottom: 1rem;
+    }
 }
